[JSTesting] update QUnit html * Through all QUnit updates, the html was never updated (only the JS/CSS files).  Updating html now according to QUnit documentation. (introduced a new html element used for adding test document elements which are automatically cleaned up. the JS/CSS for QUnit was already referring to this but silently failing)
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@109676 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/tests/qunit/index.html
+++ b/tests/qunit/index.html
@@ -131,6 +131,7 @@
 	</div>
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol>
+	<div id="qunit-fixture"></div>
 
 <!-- Scripts inserting stuff here shall remove it themselfs! -->
 <div id="content"></div>
