--- a/tests/qunit/index.html
+++ b/tests/qunit/index.html
@@ -55,15 +55,15 @@
 
 	<!-- MW: mediawiki.page.startup -->
 	<script src="../../resources/jquery/jquery.client.js"></script>
+	<script src="../../resources/mediawiki/mediawiki.util.js"></script>
 	<script src="../../resources/mediawiki.page/mediawiki.page.startup.js"></script>
 
-	<!-- MW: mediawiki.user|mediawiki.util|mediawiki.page.ready -->
+	<!-- MW: mediawiki.user|mediawiki.page.ready -->
 	<script src="../../resources/jquery/jquery.cookie.js"></script>
 	<script src="../../resources/mediawiki/mediawiki.user.js"></script>
 
 	<script src="../../resources/jquery/jquery.messageBox.js"></script>
 	<script src="../../resources/jquery/jquery.mwExtension.js"></script>
-	<script src="../../resources/mediawiki/mediawiki.util.js"></script>
 
 	<script src="../../resources/jquery/jquery.checkboxShiftClick.js"></script>
 	<script src="../../resources/jquery/jquery.makeCollapsible.js"></script>
